--- a/content/style.css
+++ b/content/style.css
@@ -39,9 +39,8 @@ body,
   inset: 0;
 }
 
-.marker-shadow {
-  filter: drop-shadow(0px 2px 2px rgba(0,0,0,.3));
-  -webkit-filter: drop-shadow(0px 2px 2px rgba(0,0,0,.3));
+.leaflet-interactive.marker-shadow {
+  filter: url('#marker-shadow')
 }
 
 .repeater-dot {
